[gd_scene load_steps=89 format=3 uid="uid://b3k846f2htp6d"]

[ext_resource type="Script" uid="uid://cfo757oey1b7c" path="res://assets/scripts/player_ctrl.gd" id="1_cfgap"]
[ext_resource type="Texture2D" uid="uid://fj73eae060o4" path="res://assets/art/kk.png" id="2_jn7ie"]
[ext_resource type="Texture2D" uid="uid://b3u6vdpam0o7q" path="res://assets/art/fav.png" id="3_jn7ie"]
[ext_resource type="Texture2D" uid="uid://dd1pxhnui4kyr" path="res://assets/art/recreate idle/fav.png" id="4_1rsa0"]
[ext_resource type="Texture2D" uid="uid://ct4jtka3indnr" path="res://assets/art/bel.png" id="4_gb3uv"]
[ext_resource type="Texture2D" uid="uid://dqewm400620vm" path="res://assets/art/Heavy.png" id="4_h4qwe"]
[ext_resource type="Texture2D" uid="uid://bgilgnad8vt41" path="res://assets/art/recreate idle/fav-RECREATE-walk.png" id="7_h4qwe"]

[sub_resource type="GDScript" id="GDScript_ifqy8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6oka"]
atlas = ExtResource("4_h4qwe")
region = Rect2(6, 127, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbuhy"]
atlas = ExtResource("4_h4qwe")
region = Rect2(38, 127, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_58xuv"]
atlas = ExtResource("4_h4qwe")
region = Rect2(70, 127, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvsem"]
atlas = ExtResource("4_h4qwe")
region = Rect2(102, 127, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f31nw"]
atlas = ExtResource("4_h4qwe")
region = Rect2(134, 127, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytaco"]
atlas = ExtResource("4_h4qwe")
region = Rect2(166, 127, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_37nll"]
atlas = ExtResource("4_gb3uv")
region = Rect2(3, 260, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8ycg"]
atlas = ExtResource("4_gb3uv")
region = Rect2(34, 260, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c61hd"]
atlas = ExtResource("4_gb3uv")
region = Rect2(65, 260, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndh8d"]
atlas = ExtResource("4_gb3uv")
region = Rect2(96, 260, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac6w6"]
atlas = ExtResource("4_gb3uv")
region = Rect2(127, 260, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qheti"]
atlas = ExtResource("4_gb3uv")
region = Rect2(158, 260, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_neqwl"]
atlas = ExtResource("4_gb3uv")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21pt6"]
atlas = ExtResource("4_gb3uv")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fccq8"]
atlas = ExtResource("4_gb3uv")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vciqw"]
atlas = ExtResource("4_gb3uv")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0p0i"]
atlas = ExtResource("4_gb3uv")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns5qa"]
atlas = ExtResource("4_gb3uv")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jww2t"]
atlas = ExtResource("4_gb3uv")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18m5o"]
atlas = ExtResource("4_gb3uv")
region = Rect2(224, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejoke"]
atlas = ExtResource("4_gb3uv")
region = Rect2(256, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k1nu"]
atlas = ExtResource("4_gb3uv")
region = Rect2(288, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_661wk"]
atlas = ExtResource("2_jn7ie")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gsj3"]
atlas = ExtResource("2_jn7ie")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61luu"]
atlas = ExtResource("2_jn7ie")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l13nn"]
atlas = ExtResource("2_jn7ie")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhyrk"]
atlas = ExtResource("2_jn7ie")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0ejw"]
atlas = ExtResource("2_jn7ie")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlcac"]
atlas = ExtResource("4_h4qwe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5naw"]
atlas = ExtResource("4_h4qwe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku5it"]
atlas = ExtResource("4_h4qwe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i63b3"]
atlas = ExtResource("4_h4qwe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo533"]
atlas = ExtResource("4_h4qwe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2j45"]
atlas = ExtResource("4_h4qwe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe0he"]
atlas = ExtResource("4_h4qwe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs37c"]
atlas = ExtResource("4_h4qwe")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyti6"]
atlas = ExtResource("4_h4qwe")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yogdx"]
atlas = ExtResource("4_h4qwe")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o5rv"]
atlas = ExtResource("4_h4qwe")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8omh1"]
atlas = ExtResource("4_h4qwe")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_51vd2"]
atlas = ExtResource("4_h4qwe")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cyte"]
atlas = ExtResource("4_h4qwe")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0vvo"]
atlas = ExtResource("4_h4qwe")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjpjp"]
atlas = ExtResource("4_h4qwe")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou00u"]
atlas = ExtResource("4_h4qwe")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m57r"]
atlas = ExtResource("4_h4qwe")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyh8g"]
atlas = ExtResource("4_1rsa0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lak6o"]
atlas = ExtResource("4_1rsa0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0u0r"]
atlas = ExtResource("4_1rsa0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyybk"]
atlas = ExtResource("4_1rsa0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sxqo"]
atlas = ExtResource("4_1rsa0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb0u4"]
atlas = ExtResource("4_1rsa0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xue6y"]
atlas = ExtResource("3_jn7ie")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4bv"]
atlas = ExtResource("3_jn7ie")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0slx"]
atlas = ExtResource("3_jn7ie")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_puklr"]
atlas = ExtResource("3_jn7ie")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnj7d"]
atlas = ExtResource("3_jn7ie")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61e8l"]
atlas = ExtResource("3_jn7ie")
region = Rect2(160, 128, 32, 32)

<<<<<<< HEAD
[sub_resource type="AtlasTexture" id="AtlasTexture_h4qwe"]
atlas = ExtResource("3_jn7ie")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fxyf"]
atlas = ExtResource("3_jn7ie")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_022bn"]
atlas = ExtResource("3_jn7ie")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fuox"]
atlas = ExtResource("3_jn7ie")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srhnk"]
atlas = ExtResource("3_jn7ie")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pg5c"]
atlas = ExtResource("3_jn7ie")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfxew"]
atlas = ExtResource("3_jn7ie")
=======
[sub_resource type="AtlasTexture" id="AtlasTexture_gb3uv"]
atlas = ExtResource("2_jn7ie")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rsa0"]
atlas = ExtResource("2_jn7ie")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4qwe"]
atlas = ExtResource("2_jn7ie")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fxyf"]
atlas = ExtResource("2_jn7ie")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_022bn"]
atlas = ExtResource("2_jn7ie")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fuox"]
atlas = ExtResource("2_jn7ie")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srhnk"]
atlas = ExtResource("2_jn7ie")
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phmki"]
atlas = ExtResource("7_h4qwe")
region = Rect2(0, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_nshm7"]
atlas = ExtResource("7_h4qwe")
region = Rect2(32, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_um21y"]
atlas = ExtResource("7_h4qwe")
region = Rect2(64, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a1wu"]
atlas = ExtResource("7_h4qwe")
region = Rect2(96, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_b55il"]
atlas = ExtResource("7_h4qwe")
region = Rect2(128, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wxy7"]
atlas = ExtResource("7_h4qwe")
region = Rect2(160, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2etem"]
atlas = ExtResource("7_h4qwe")
region = Rect2(192, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_agsvx"]
atlas = ExtResource("7_h4qwe")
region = Rect2(224, 35, 32, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivq7u"]
atlas = ExtResource("3_jn7ie")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vduem"]
atlas = ExtResource("3_jn7ie")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrlov"]
atlas = ExtResource("3_jn7ie")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_un6f4"]
atlas = ExtResource("3_jn7ie")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1gsj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6oka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbuhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58xuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvsem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f31nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytaco")
}],
"loop": false,
"name": &"air",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37nll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8ycg")
}, {
<<<<<<< HEAD
"duration": 1.5,
"texture": null
}, {
"duration": 1.5,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
=======
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
"duration": 1.0,
"texture": SubResource("AtlasTexture_c61hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndh8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac6w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qheti")
}],
<<<<<<< HEAD
"loop": false,
"name": &"dash",
"speed": 20.0
=======
"loop": true,
"name": &"dash",
"speed": 14.0
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neqwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21pt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fccq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vciqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0p0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns5qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jww2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18m5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejoke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k1nu")
}],
<<<<<<< HEAD
"loop": false,
=======
"loop": true,
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_661wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gsj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61luu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l13nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0ejw")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlcac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5naw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku5it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i63b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo533")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2j45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe0he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs37c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyti6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yogdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o5rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8omh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51vd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cyte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0vvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjpjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou00u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m57r")
}],
"loop": false,
"name": &"heavy_attack",
<<<<<<< HEAD
"speed": 16.0
=======
"speed": 25.0
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyh8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lak6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0u0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyybk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sxqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb0u4")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xue6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0slx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puklr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnj7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61e8l")
}],
<<<<<<< HEAD
"loop": true,
=======
"loop": false,
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
<<<<<<< HEAD
=======
"texture": SubResource("AtlasTexture_gb3uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rsa0")
}, {
"duration": 1.0,
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
"texture": SubResource("AtlasTexture_h4qwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fxyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_022bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fuox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srhnk")
<<<<<<< HEAD
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pg5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfxew")
}],
"loop": false,
"name": &"light_attack",
"speed": 20.0
=======
}],
"loop": false,
"name": &"light_attack",
"speed": 9.0
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phmki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nshm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um21y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a1wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b55il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wxy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2etem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agsvx")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivq7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vduem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrlov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un6f4")
}],
"loop": false,
"name": &"stop",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifqy8"]
size = Vector2(10, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gb3uv"]
radius = 6.0
height = 18.0

[node name="player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_cfgap")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -10)
zoom = Vector2(5, 5)
limit_left = -564
limit_top = -241
limit_right = 726
limit_bottom = 82

[node name="animator" type="Node2D" parent="."]
script = SubResource("GDScript_ifqy8")

[node name="animation" type="AnimatedSprite2D" parent="animator"]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_1gsj3")
animation = &"dash"
<<<<<<< HEAD
frame = 8
frame_progress = 1.0

[node name="dashTime" type="Timer" parent="animator"]
wait_time = 0.3

[node name="dashCooldown" type="Timer" parent="animator"]
=======
frame = 2
frame_progress = 0.33028892
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ifqy8")

[node name="DealDamageZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageZone"]
position = Vector2(6, 4)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_gb3uv")

[connection signal="animation_finished" from="animator/animation" to="." method="_on_animation_animation_finished"]
<<<<<<< HEAD
[connection signal="timeout" from="animator/dashTime" to="." method="_on_dash_time_timeout"]
[connection signal="timeout" from="animator/dashCooldown" to="." method="_on_dash_cooldown_timeout"]
=======
>>>>>>> 61aee4f2655cbbf50bdd94a2031b5b8c5662b045
